# paddleocr-wrapper

./: .env.example  README.md  paddleocr_cli.py  pyproject.toml  setup.py
paddleocr_wrapper/: __init__.py  config.py  paddleocr_config.json  paddleocr_wrapper.py
