[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paddleocr-wrapper"
version = "0.1.5"
description = "PaddleOCR API 封装库，支持 PDF/图片转 Markdown"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "markdownify>=1.2.2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["paddleocr_wrapper*"]

[tool.setuptools.package-data]
paddleocr_wrapper = ["paddleocr_config.json"]
